# rustic-fractals

./: Cargo.toml  README.md
src/: chaos_game.rs  frac_render.rs  main.rs
